# brasil-cli

./: .gitignore  pyproject.toml  readme.md
src/: main.py
src/domain/modules/cep/exceptions/: invalid_api_version_exception.py
src/domain/services/network/: endpoint_service.py
src/infra/services/network/: http_endpoint_service.py
src/infra/utils/: tabulate.py
src/modules/cep/: service.py
