[tool.poetry]
name = "brasil-cli"
version = "0.1.0"
description = ""
authors = ["abelsouzacosta <abelsouzacostajunior@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
typer = "^0.12.4"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
